--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Nicholas Eikenberg Web Developer React Software Software Engineer Dev. "
+      content="Portfolio for Nicholas Eikenberg, software engineer / web developer. JavaScript, React, Django, Mongo, Express, HTML, CSS, Python"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
